--- a/metadata.ini
+++ b/metadata.ini
@@ -4,5 +4,6 @@ collections=Stellenverknuepfung
 [Stellenverknuepfung]
 name=Stellenverknuepfung
 author=Hannah Witte
+email=-@-.com
 tags=osm,spatialite,google maps,roads
 description=Mit diesem Workflow werden die Stellenkarten-Daten mit der Befundedatei verknüpft
